--- a/docs/docs.yaml
+++ b/docs/docs.yaml
@@ -246,6 +246,12 @@ paths:
             schema:
               type: object
               properties:
+                page:
+                  type: integer
+                  description: Page number be requested.
+                senderId:
+                  type: string
+                  description: The sender's ID.
                 recipientId:
                   type: string
                   description: The recipient's ID.
@@ -327,7 +333,7 @@ paths:
                 properties:
                   error:
                     $ref: "#/components/schemas/Error"
-        "401":
+        "403":
           description: Unauthorized
           content:
             application/json:
@@ -370,7 +376,7 @@ paths:
                 properties:
                   error:
                     $ref: "#/components/schemas/Error"
-        "401":
+        "403":
           description: Unauthorized
           content:
             application/json:
@@ -432,7 +438,7 @@ paths:
                 properties:
                   error:
                     $ref: "#/components/schemas/Error"
-        "401":
+        "403":
           description: Unauthorized
           content:
             application/json:
@@ -465,10 +471,6 @@ paths:
             application/json:
               schema:
                 properties:
-                  page:
-                    type: number
-                  lastPage:
-                    type: boolean
                   friends:
                     type: array
                     items:
